[package]
name = "panic-engine"
description = "An incredibly rushed and basic environment made within a day in a mad dash to prepare for LD 53"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad="0.3"
